[gd_scene load_steps=23 format=3 uid="uid://ch6x4qm75v25y"]

[ext_resource type="Script" path="res://scripts/AchievementRenderer.gd" id="1"]
[ext_resource type="ArrayMesh" uid="uid://d4nbn4fudl831" path="res://assets/3D models/NewJersey/NewJersey.obj" id="3"]
[ext_resource type="ArrayMesh" uid="uid://b1jb7eo0wnip2" path="res://assets/3D models/NonFunctionals/middlefinger.obj" id="4"]
[ext_resource type="Texture2D" uid="uid://binyfm5c6tu8w" path="res://assets/textures/NonFuncs/XRA.png" id="7"]
[ext_resource type="ArrayMesh" uid="uid://xetstsleyxph" path="res://assets/3D models/NonFunctionals/Beanie.obj" id="8"]
[ext_resource type="Material" uid="uid://cu76lmfwqbx2k" path="res://resources/WallTorch.tres" id="9"]
[ext_resource type="Texture2D" uid="uid://jcbpgsirqmer" path="res://assets/3D models/torch/Smoke30Frames_0.png" id="10"]
[ext_resource type="ArrayMesh" uid="uid://88is1tos1lfo" path="res://assets/3D models/NonFunctionals/brain.obj" id="11"]
[ext_resource type="PackedScene" path="res://scenes/WorldEnvironment.tscn" id="15"]

[sub_resource type="PlaneMesh" id="5"]
size = Vector2(100, 20)

[sub_resource type="QuadMesh" id="7"]
size = Vector2(100, 20)

[sub_resource type="BoxMesh" id="8"]
size = Vector3(100, 100, 100)

[sub_resource type="QuadMesh" id="23"]

[sub_resource type="QuadMesh" id="3"]
size = Vector2(2, 2)

[sub_resource type="QuadMesh" id="11"]
size = Vector2(3, 2)

[sub_resource type="QuadMesh" id="15"]
size = Vector2(1.4, 2.5)

[sub_resource type="StandardMaterial3D" id="18"]
albedo_texture = ExtResource("7")

[sub_resource type="QuadMesh" id="17"]
material = SubResource("18")
size = Vector2(2.5, 1)

[sub_resource type="QuadMesh" id="14"]

[sub_resource type="StandardMaterial3D" id="4"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("10")
billboard_mode = 3
particles_anim_h_frames = 6
particles_anim_v_frames = 5
particles_anim_loop = true

[sub_resource type="QuadMesh" id="20"]
material = SubResource("4")

[sub_resource type="Environment" id="Environment_63vr6"]
ambient_light_sky_contribution = 0.0
tonemap_mode = 3
glow_enabled = true
fog_enabled = true
adjustment_enabled = true

[node name="AchievementRenderer" type="Node3D"]

[node name="Renderer" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.1357, -4, 0.701188)
mesh = SubResource("5")

[node name="Wall" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.1357, 6, -8.29881)
mesh = SubResource("7")

[node name="FormagDrung" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, 0, 0.05087)
mesh = ExtResource("3")

[node name="hide" type="MeshInstance3D" parent="Renderer/FormagDrung"]
mesh = SubResource("8")

[node name="Badenov" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 4, -0.65666, 0)
mesh = ExtResource("8")

[node name="hide" type="MeshInstance3D" parent="Renderer/Badenov"]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 6.5666, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="ACDC Logo" type="MeshInstance3D" parent="Renderer/Badenov"]
transform = Transform3D(10, 0, 0, 0, 5.566, 3.73409, 0, -2.24045, 9.27667, -0.540733, 7.86448, 9.32593)
mesh = SubResource("23")
skeleton = NodePath("../..")

[node name="NotoLotta" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)
mesh = SubResource("3")

[node name="hide" type="MeshInstance3D" parent="Renderer/NotoLotta"]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, 0, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Asshole" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(0.026, 0, 0, 0, 0.026, 0, 0, 0, 0.026, 12, -1.09516, 0)
mesh = ExtResource("4")

[node name="hide" type="MeshInstance3D" parent="Renderer/Asshole"]
transform = Transform3D(0.961538, 0, 0, 0, 0.961538, 0, 0, 0, 0.961538, 0, 42.1215, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Wyoming" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 16, 0, 0)
mesh = SubResource("11")

[node name="hide" type="MeshInstance3D" parent="Renderer/Wyoming"]
transform = Transform3D(0.03125, 0, 0, 0, 0.03125, 0, 0, 0, 0.03125, 0, -1.49012e-07, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Shai" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
mesh = SubResource("15")

[node name="hide" type="MeshInstance3D" parent="Renderer/Shai"]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, -1.19209e-07, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Ufrz" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 0, 0)
mesh = SubResource("17")

[node name="hide" type="MeshInstance3D" parent="Renderer/Ufrz"]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, -1.19209e-07, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Brawlhalla" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 28, 0, 0)
mesh = SubResource("14")

[node name="hide" type="MeshInstance3D" parent="Renderer/Brawlhalla"]
transform = Transform3D(0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, -1.19209e-07, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="Hell" type="GPUParticles3D" parent="Renderer"]
transform = Transform3D(0.49, 0, 0, 0, 0.49, 0, 0, 0, 0.49, 32, -1.06352, 0)
amount = 200
lifetime = 0.5
randomness = 1.0
draw_order = 2
process_material = ExtResource("9")
draw_pass_1 = SubResource("20")

[node name="hide" type="MeshInstance3D" parent="Renderer/Hell"]
transform = Transform3D(0.0510204, 0, 0, 0, 0.0510204, 0, 0, 0, 0.0510204, 0, 2.17046, 0)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="IQTest" type="MeshInstance3D" parent="Renderer"]
transform = Transform3D(0.0230259, -0.000655576, 0.0097148, -0.00118075, 0.0245712, 0.00445671, -0.00966504, -0.00456362, 0.0226, 36, 0, 0)
mesh = ExtResource("11")

[node name="hide" type="MeshInstance3D" parent="Renderer/IQTest"]
transform = Transform3D(0.921037, -0.0472299, -0.386602, -0.0262231, 0.982848, -0.182545, 0.388592, 0.178268, 0.904001, 0, 0.000221252, 6.10352e-05)
mesh = SubResource("8")
skeleton = NodePath("../../FormagDrung")

[node name="AchievementText" type="Label" parent="Renderer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -73.0
text = "Test Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 16, 3, 4)
current = true
script = ExtResource("1")

[node name="SpotLight3D" type="SpotLight3D" parent="Camera3D"]
spot_range = 11.1997

[node name="SpotLight2" type="SpotLight3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 2.86603, -2.9641)
spot_range = 11.4354

[node name="WorldEnvironment1" parent="." instance=ExtResource("15")]
environment = SubResource("Environment_63vr6")
